--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.1</version>
+		<version>3.4.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>edu</groupId>
@@ -31,7 +31,11 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
-
+		
+	 	<dependency>
+       	 	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-logging</artifactId>
+    	</dependency>
 		<!-- Dependencia para Jakarta RESTful Web Services (JAX-RS) -->
 		<dependency>
 			<groupId>jakarta.ws.rs</groupId>
