--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,15 @@ spring.datasource.username=jaimeprietorubio
 spring.datasource.password=B4s3D3D4t0sJPR*
 server.port= 8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Configuracion para los ficheros log
+logging.level.org.springframework.web=INFO
+logging.level.com.estadisticas=DEBUG
+#Donde se guarda el fichero
+logging.file.name=Fichero/ficherApi.log
+#Define los pattern
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+#Cuando el archivo llegue a 10MB se crea un nuevo archivo 
+logging.logback.rollingpolicy.max-file-size=10MB
+#Se quedan los ultimos 7 logs
+logging.logback.rollingpolicy.max-history=7
