envio de correo conseguido

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=jaimeprietorubio
 spring.datasource.password=B4s3D3D4t0sJPR*
 server.port= 8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 #Configuracion para los ficheros log
 logging.level.org.springframework.web=INFO
@@ -16,3 +17,10 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.logback.rollingpolicy.max-file-size=10MB
 #Se quedan los ultimos 7 logs
 logging.logback.rollingpolicy.max-history=7
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=animexpjpr@gmail.com
+spring.mail.password=jnap vlbq szve gyjf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
