--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=proyectoFinalAPI
-spring.datasource.url=jdbc:mysql://13.61.93.46:3306/animexp
-spring.datasource.username=jaimeprietorubio
-spring.datasource.password=B4s3D3D4t0sJPR*
+spring.datasource.url=jdbc:mysql://IP:Puesto/BDD
+spring.datasource.username=UsuarioBDD
+spring.datasource.password=ContraBDD
 server.port= 8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+server.servlet.context-path=/API
 
 #Configuracion para los ficheros log
 logging.level.org.springframework.web=INFO
@@ -20,7 +22,7 @@ logging.logback.rollingpolicy.max-history=7
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=animexpjpr@gmail.com
-spring.mail.password=jnap vlbq szve gyjf
+spring.mail.username=miEmail
+spring.mail.password=paswordEmail
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
